fix: increase z-index of search-wrapper

--- a/static/styles.css
+++ b/static/styles.css
@@ -189,7 +189,7 @@ li {
     padding-bottom: 1rem;
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 110;
     & .search-input {
         flex: 1;
         height: 2.5rem;
